refactor: throw exception replace by log and return empty in Download Get()  feat: add test of IEXDataDownloader

--- a/QuantConnect.IEX.Tests/QuantConnect.IEX.Tests.csproj
+++ b/QuantConnect.IEX.Tests/QuantConnect.IEX.Tests.csproj
@@ -26,6 +26,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\QuantConnect.IEX.Downloader\QuantConnect.IEX.Downloader.csproj" />
 		<ProjectReference Include="..\QuantConnect.IEX\QuantConnect.IEX.csproj" />
 		<ProjectReference Include="..\..\Lean\Tests\QuantConnect.Tests.csproj" />
 	</ItemGroup>
