--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       QC_JOB_USER_ID: ${{ secrets.QC_JOB_USER_ID }}
       QC_API_ACCESS_TOKEN: ${{ secrets.QC_API_ACCESS_TOKEN }}
       QC_JOB_ORGANIZATION_ID: ${{ secrets.QC_JOB_ORGANIZATION_ID }}
+      QC_IEX_CLOUD_API_KEY: ${{ QC_IEX_CLOUD_API_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -43,7 +44,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: quantconnect/lean:foundation
-          options: -v /home/runner/work:/__w --workdir /__w/Lean.DataSource.IEX/Lean.DataSource.IEX -e QC_JOB_USER_ID=${{ secrets.QC_JOB_USER_ID }} -e QC_API_ACCESS_TOKEN=${{ secrets.QC_API_ACCESS_TOKEN }} -e QC_JOB_ORGANIZATION_ID=${{ secrets.QC_JOB_ORGANIZATION_ID }}
+          options: -v /home/runner/work:/__w --workdir /__w/Lean.DataSource.IEX/Lean.DataSource.IEX -e QC_JOB_USER_ID=${{ secrets.QC_JOB_USER_ID }} -e QC_API_ACCESS_TOKEN=${{ secrets.QC_API_ACCESS_TOKEN }} -e QC_JOB_ORGANIZATION_ID=${{ secrets.QC_JOB_ORGANIZATION_ID }} -e QC_IEX_CLOUD_API_KEY=${{ secrets.QC_IEX_CLOUD_API_KEY }}
       
       - name: BuildDataProcessing
         run: dotnet build ./QuantConnect.IEX.Downloader/QuantConnect.IEX.Downloader.csproj /p:Configuration=Release /v:quiet /p:WarningLevel=1
