--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       QC_JOB_USER_ID: ${{ secrets.QC_JOB_USER_ID }}
       QC_API_ACCESS_TOKEN: ${{ secrets.QC_API_ACCESS_TOKEN }}
       QC_JOB_ORGANIZATION_ID: ${{ secrets.QC_JOB_ORGANIZATION_ID }}
-      QC_IEX_CLOUD_API_KEY: ${{ QC_IEX_CLOUD_API_KEY }}
+      QC_IEX_CLOUD_API_KEY: ${{ secrets.QC_IEX_CLOUD_API_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
