--- a/QuantConnect.IEX.Tests/QuantConnect.IEX.Tests.csproj
+++ b/QuantConnect.IEX.Tests/QuantConnect.IEX.Tests.csproj
@@ -7,10 +7,10 @@
 		<IsPackable>false</IsPackable>
 		<TestProjectType>UnitTest</TestProjectType>
 		<OutputPath>bin\$(Configuration)\</OutputPath>
-		<Product>QuantConnect.IEX.Tests</Product>
-		<AssemblyName>QuantConnect.IEX.Tests</AssemblyName>
-		<RootNamespace>QuantConnect.IEX.Tests</RootNamespace>
-		<AssemblyTitle>QuantConnect.IEX.Tests</AssemblyTitle>
+		<Product>QuantConnect.Lean.DataSource.IEX.Tests</Product>
+		<AssemblyName>QuantConnect.Lean.DataSource.IEX.Tests</AssemblyName>
+		<RootNamespace>QuantConnect.Lean.DataSource.IEX.Tests</RootNamespace>
+		<AssemblyTitle>QuantConnect.Lean.DataSource.IEX.Tests</AssemblyTitle>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	</PropertyGroup>
 
