--- a/QuantConnect.IEX.Tests/QuantConnect.DataSource.IEX.Tests.csproj
+++ b/QuantConnect.IEX.Tests/QuantConnect.DataSource.IEX.Tests.csproj
@@ -26,7 +26,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\QuantConnect.IEX\QuantConnect.IEX.csproj" />
+		<ProjectReference Include="..\QuantConnect.IEX\QuantConnect.DataSource.IEX.csproj" />
 		<ProjectReference Include="..\..\Lean\Tests\QuantConnect.Tests.csproj" />
 	</ItemGroup>
 
