Initialization via Job Packet and Rename DataQueueHandler to DataProvider (#7)
* feat: initialization through Job packet

* rename: DataQueueHandler to DataProvider

* rename: projects, solution
fix: path in workflow file

* fix: tryGetConfig of iex-price-plan

* feat: handle "parsing to enum" excpetion

* fix: additional validation to enum parsed value

* feat: use global instead of Config in ValidateSubscription

--- a/QuantConnect.IEX.Tests/QuantConnect.DataSource.IEX.Tests.csproj
+++ b/QuantConnect.IEX.Tests/QuantConnect.DataSource.IEX.Tests.csproj
@@ -7,10 +7,10 @@
 		<IsPackable>false</IsPackable>
 		<TestProjectType>UnitTest</TestProjectType>
 		<OutputPath>bin\$(Configuration)\</OutputPath>
-		<Product>QuantConnect.IEX.Tests</Product>
-		<AssemblyName>QuantConnect.IEX.Tests</AssemblyName>
-		<RootNamespace>QuantConnect.IEX.Tests</RootNamespace>
-		<AssemblyTitle>QuantConnect.IEX.Tests</AssemblyTitle>
+		<Product>QuantConnect.Lean.DataSource.IEX.Tests</Product>
+		<AssemblyName>QuantConnect.Lean.DataSource.IEX.Tests</AssemblyName>
+		<RootNamespace>QuantConnect.Lean.DataSource.IEX.Tests</RootNamespace>
+		<AssemblyTitle>QuantConnect.Lean.DataSource.IEX.Tests</AssemblyTitle>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	</PropertyGroup>
 
@@ -26,7 +26,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\QuantConnect.IEX\QuantConnect.IEX.csproj" />
+		<ProjectReference Include="..\QuantConnect.IEX\QuantConnect.DataSource.IEX.csproj" />
 		<ProjectReference Include="..\..\Lean\Tests\QuantConnect.Tests.csproj" />
 	</ItemGroup>
 
